fix: heading spacing

--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  margin-top: 0;
   font-family: "Plus Jakarta Sans", sans-serif;
   color: #121212;
   font-style: normal;
@@ -9179,7 +9179,6 @@ button.testimonial-arrow-btn:hover i {
   margin-top: 48px;
 }
 .single-post-item .post-title {
-  margin-bottom: 0;
   line-height: initial;
   margin-top: 6px;
 }
