--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -393,7 +393,7 @@
   }
 
   .post-title {
-    margin-bottom: 0;
+    // margin-bottom: 0;
     line-height: initial;
     margin-top: 6px;
 
