--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -39,7 +39,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  margin-top: 0;
   font-family: $heading-font;
   color: $black-2;
   font-style: normal;
